[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Gameplay/Player/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://Gameplay/Player/platformer_data.gd" type="Script" id=3]

[sub_resource type="Resource" id=3]
script = ExtResource( 3 )
gravity_up_modifier = 4.0
gravity_down_modifier = 6.0
gravity_terminal_velocity = 450.0
jump_max_height = 4.0
jump_is_variable = true
jump_duration = 1.0
jump_midair_count = 0
jump_has_air_control = true
jump_buffer_timeout = 0.5
jump_coyote_timeout = 0.2
wall_drag = 0.5
wall_drag_decay_time = 0.8
wall_jump_enabled = true
wall_jump_force = 300.0
wall_jump_angle = 45.0
wall_jump_control_timeout = 0.2
move_acceleration_time = 0.0
move_deceleration_time = 0.0
move_top_speed = 4.0

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float white_amount: hint_range(0., 1.) = 0.;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	if (COLOR.a == 0.) {
		COLOR = vec4(0.);
	} else {
		COLOR = mix(color, vec4(1.), white_amount);	
	}
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/white_amount = 0.0

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0.0247525, 0.969318 ), 0.0, 0.0270053, 0, 0, Vector2( 0.445545, 0.832955 ), -0.952189, -0.952189, 0, 0, Vector2( 0.990099, 0.00568175 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:material:shader_param/white_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite/SparkleParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
resource_name = "evolve"
length = 7.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 1.75, 2.025, 6, 7 ),
"transitions": PoolRealArray( 2, 0.241485, 0.241485, 0.241485, 0.392292, 0.392292 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -90 ), Vector2( 0, -75 ), Vector2( 0, -80 ), Vector2( 0, -80 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:material:shader_param/white_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2.4, 2.8, 3.2, 3.6, 4, 4.4, 4.9, 5.75, 6, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.25, 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite/SparkleParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5.85 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="PlaformerCharacter" type="KinematicBody2D" groups=["Persist", "Player"]]
collision_mask = 2
script = ExtResource( 2 )
platformer_data = SubResource( 3 )

[node name="AnimatedSprite" type="Sprite" parent="."]
material = SubResource( 7 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="SparkleParticles" type="CPUParticles2D" parent="AnimatedSprite"]
position = Vector2( 0, -80 )
scale = Vector2( 4, 4 )
emitting = false
amount = 24
one_shot = true
explosiveness = 0.95
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, -98 )
initial_velocity = 72.74
initial_velocity_random = 0.43
scale_amount = 8.0
scale_amount_curve = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DownCast" type="RayCast2D" parent="."]
position = Vector2( 6, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="DownCast2" type="RayCast2D" parent="."]
position = Vector2( -6, 0 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="LeftCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -12, 0 )
collision_mask = 2

[node name="RightCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 12, 0 )
collision_mask = 2

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="JumpBufferTimer" type="Timer" parent="."]

[node name="WallDragDecayTimer" type="Timer" parent="."]

[node name="WallJumpControlTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )
process_mode = 0
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 8.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/evolve = SubResource( 5 )
